@@ -5,7 +5,7 @@ import copy
 import optparse  # pylint: disable=deprecated-module
 import pathlib
 import re
-from typing import List, Pattern
+from typing import List, Pattern, Union
 
 from pylint import utils
 
@@ -27,7 +27,11 @@ def _regexp_csv_validator(_, name, value):
     return [_regexp_validator(_, name, val) for val in _csv_validator(_, name, value)]
 
 
-def _regexp_paths_csv_validator(_, name: str, value: str) -> List[Pattern[str]]:
+def _regexp_paths_csv_validator(
+    _, name: str, value: Union[str, List[Pattern[str]]]
+) -> List[Pattern[str]]:
+    if isinstance(value, list):
+        return value
     patterns = []
     for val in _csv_validator(_, name, value):
         patterns.append(
